[package]
name = "mprisbee-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
async-std = { version = "1.13.1", features = ["attributes"] }
futures = "0.3.31"
getopts = "0.2.23"
mpris-server = "0.9.0"
notify-rust = "4.11.7"
serde_json = "1.0.140"
sysinfo = "0.35.2"
users = "0.11.0"
